--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
+*{
+  background-color: rgb(238, 232, 227);
+}
 .App {
   text-align: center;
+  width: 450px;
+  margin: auto;
+  margin-top: 3%;
+  padding: 3%;
+  border: 2px solid grey;
+  box-shadow: 3px 4px 15px ;
+  background-color: transparent;
+  border-radius: 25px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.labelName{
+  text-align: left;
 }
